gcc/testsuite/rust/rustc/ui/parser/keyword-ref-as-identifier.rs
fn main() {
    let ref = "foo"; // { dg-error "" "" { target *-*-* } }
}

